# ENGI-9804-Image-Processing-and-Applications

./: README.md
Assignment/a1/: a1.mlx
Assignment/a2/: band_filter.m
Lab/lab1/: README.txt  lab1.mlx  lab1histogram.mlx  lab1performanceEvaluation.mlx  transform.m
Lab/lab2/: gray2binary.m  lab02.mlx  mfilter.m  otsu.m  sfilter.m
Lab/lab3/: lab03.mlx
Lab/lab4/: Moment_invariants.m  calculate_moments.m  lab4.mlx
Project/: CMakeLists.txt  README.md  detect.h  detectSquare.cpp  detectSquare.h  main.cpp  sideWindowFilter.cpp  sideWindowFilter.h
